--- a/public/style.css
+++ b/public/style.css
@@ -29,10 +29,9 @@ h1{
   padding: 10px;
 }
 
-/* .warn{
+.warn{
   color: red;
   background-color: black;
-  width: 400px;
   text-align: center;
   margin: 0 auto;
   border-radius: 10px;
@@ -40,7 +39,7 @@ h1{
   font-family: 'Source Code Pro', monospace;
   padding: 10px;
   margin-top: 20px;
-} */
+}
 
 .catagories{
   margin: 1rem;
